--- a/conf.d/demo1.conf
+++ b/conf.d/demo1.conf
@@ -2,12 +2,12 @@ server {
   listen 80;
   listen [::]:80;
 
-  server_name demo1.test.bzh;
+  server_name demo1.docker.bzh;
   access_log /var/log/nginx/demo1_access.log;
   error_log /var/log/nginx/demo1_error.log;
 
   location / {
-    proxy_pass http://192.168.1.14:81/;
+    proxy_pass http://192.168.1.109:81/;
   }
 
   error_page   500 502 503 504  /50x.html;
