--- a/conf.d/demo2.conf
+++ b/conf.d/demo2.conf
@@ -2,12 +2,12 @@ server {
   listen 80;
   listen [::]:80;
 
-  server_name demo2.test.bzh;
+  server_name demo2.docker.bzh;
   access_log /var/log/nginx/demo2_access.log;
   error_log /var/log/nginx/demo2_error.log;
 
   location / {
-    proxy_pass http://192.168.1.14:82/;
+    proxy_pass http://192.168.1.109:82/;
   }
 
   error_page   500 502 503 504  /50x.html;
