--- a/conf.d/demo3.conf
+++ b/conf.d/demo3.conf
@@ -2,12 +2,12 @@ server {
   listen 80;
   listen [::]:80;
 
-  server_name demo3.test.bzh;
+  server_name demo3.docker.bzh;
   access_log /var/log/nginx/demo3_access.log;
   error_log /var/log/nginx/demo3_error.log;
 
   location / {
-    proxy_pass http://192.168.1.14:83/;
+    proxy_pass http://192.168.1.109:83/;
   }
 
   error_page   500 502 503 504  /50x.html;
