--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   nginx:
     container_name: nginx
-    image: nginx:1.17.8
+    image: nginx
     ports:
       - "80:80"
     volumes:
